# computer_parts

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  flake.nix  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
backend/src/: main.py  settings.py
computerparts/: __init__.py
computerparts/components/: __init__.py  image_uploader.py  image_viewer.py
computerparts/views/: __init__.py  home.py
config/: asgi.py  settings.py  urls.py  wsgi.py
detection/: api.py  models.py  urls.py  utils.py  views.py
detection/migrations/: 0001_initial.py
detection/templates/: upload.html
detection/templates/components/: carousel.html  form.html  image_preview.html
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  nginx.conf
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  components.json  flake.nix  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/clients/: image-processor.ts
frontend/src/components/: number-input.tsx  preview.tsx  results.tsx  sidebar.tsx  upload.tsx
frontend/src/components/ui/: carousel.tsx  form.tsx
frontend/src/hooks/: use-image-processor-client.ts  use-post-image.tsx
frontend/src/layouts/: default.tsx
frontend/src/models/: image-processing.ts
frontend/src/utils/: arrays.ts  style.ts
frontend/src/views/: home.tsx
theme/: urls.py
theme/static_src/src/: styles.css
theme/templates/: base.html
